tests/test_input_files/bad/test_bad_while_stmt_3.punkt
main {
	while {
		print "missing condition".
	}
}
